[package]
name = "mdslw"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["std", "backtrace"] }
clap = { version = "4", features = ["env", "derive"] }
clap_complete = "4"
ignore = "0.4"
include_dir = "0.7"
log = { version = "0.4", features = ["std"] }
pulldown-cmark = { version = "0.10", default-features = false }
rayon = "1"
tempfile = "3"
