[package]
name = "mdslw"
version = "0.12.0"
edition = "2021"

[profile.release]
# Optimize release binaries.
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["std", "backtrace"] }
clap = { version = "4", features = ["env", "derive"] }
clap_complete = "4"
ignore = "0.4"
include_dir = "0.7"
log = { version = "0.4", features = ["std"] }
pulldown-cmark = { version = "0.10", default-features = false }
rayon = "1"
similar = "2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
