[package]
name = "mdslw"
version = "0.16.2"
edition = "2024"

[profile.release]
# Optimize release binaries.
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["std", "backtrace"] }
clap = { version = "4", features = ["env", "derive"] }
clap_complete = "4"
ignore = "0.4"
include_dir = "0.7"
log = { version = "0.4", features = ["std"] }
pulldown-cmark = { version = "0.13", default-features = false }
rayon = "1"
similar = "2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = { version = "1", default-features = false, features = ["parse", "display", "serde"] }

[build-dependencies]
reqwest = {version = "0.13", features = ["default", "json", "blocking"]}
serde_json = { version = "1" }
